# liquid_crystals

./: AverageAveraged.py  Batch.py  CMakeLists.txt  GayBerne.ipynb  GayBerneBatch.py  Gay_Berne.py  HGO.py  HGOBatch.py  LL.py  LabwohlLasher.ipynb  LabwohlLasherBatch.py  LdG.py  LdG_LL.py  PostProcess.py  bifurcationLL.py  bifurcationLdG.py  copy_to_paper.sh  plot_energies.py  plot_potential.py  png_show.py  setupLdG.py  temp_calc.py  test.py  tmp.py  tvtk_show.py  utilities.py
html/: GayBerne_1.html  GayBerne_2.html  LabwohlLasher_1.html  LabwohlLasher_2.html  LabwohlLasher_3.html  LabwohlLasher_4.html  LabwohlLasher_5.html  LabwohlLasher_6.html
src/: Algorithms.h  GayBernePotential.cpp  GayBernePotential.h  HGOPotential.cpp  HGOPotential.h  LabwohlLasherPotential.cpp  LabwohlLasherPotential.h  ParticleLiquidCrystal.cpp  ParticleLiquidCrystal.h  ParticleSimulation.cpp  ParticleSimulation.h  Python.cpp  Types.h
